// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`compile functions with lazy arguments functions call requesting lazy parameters 1`] = `
"function anonymous(deps,evaluationSheetId,cellOrigin,ref,ensureRange,ctx
) {
// =USELAZYARG(24)
ctx['__originCellXC'] = cellOrigin;
let _2 = ()=> 24
ctx.__lastFnCalled = 'USELAZYARG'
let _1 = ctx['USELAZYARG'](_2)
return _1;
}"
`;

exports[`compile functions with lazy arguments functions call requesting lazy parameters 2`] = `
"function anonymous(deps,evaluationSheetId,cellOrigin,ref,ensureRange,ctx
) {
// =USELAZYARG(1/0)
ctx['__originCellXC'] = cellOrigin;
ctx.__lastFnCalled = 'DIVIDE'
let _2 = ()=> ctx['DIVIDE'](1, 0)
ctx.__lastFnCalled = 'USELAZYARG'
let _1 = ctx['USELAZYARG'](_2)
return _1;
}"
`;

exports[`compile functions with meta arguments function call requesting meta parameter 1`] = `
"function anonymous(deps,evaluationSheetId,cellOrigin,ref,ensureRange,ctx
) {
// =USEMETAARG(|0|)
ctx['__originCellXC'] = cellOrigin;
let _2 = ref(0, deps, evaluationSheetId, true)
ctx.__lastFnCalled = 'USEMETAARG'
let _1 = ctx['USEMETAARG'](_2)
return _1;
}"
`;

exports[`compile functions with meta arguments function call requesting meta parameter 2`] = `
"function anonymous(deps,evaluationSheetId,cellOrigin,ref,ensureRange,ctx
) {
// =USEMETAARG(|0|)
ctx['__originCellXC'] = cellOrigin;
let _2 = ref(0, deps, evaluationSheetId, true)
ctx.__lastFnCalled = 'USEMETAARG'
let _1 = ctx['USEMETAARG'](_2)
return _1;
}"
`;

exports[`expression compiler async functions 1`] = `
"async function anonymous(deps,evaluationSheetId,cellOrigin,ref,ensureRange,ctx
) {
// =WAIT(5)
ctx['__originCellXC'] = cellOrigin;
ctx.__lastFnCalled = 'WAIT'
let _1 = await ctx['WAIT'](5)
return _1;
}"
`;

exports[`expression compiler cells are converted to ranges if function require a range 1`] = `
"function anonymous(deps,evaluationSheetId,cellOrigin,ref,ensureRange,ctx
) {
// =sum(|0|)
ctx['__originCellXC'] = cellOrigin;
let _2 = ref(0, deps, evaluationSheetId)
ctx.__lastFnCalled = 'SUM'
let _1 = ctx['SUM'](ensureRange(0, deps, evaluationSheetId))
return _1;
}"
`;

exports[`expression compiler expression with $ref 1`] = `
"function anonymous(deps,evaluationSheetId,cellOrigin,ref,ensureRange,ctx
) {
// =|0|+|1|+|2|
ctx['__originCellXC'] = cellOrigin;
let _3 = ref(0, deps, evaluationSheetId)
let _4 = ref(1, deps, evaluationSheetId)
ctx.__lastFnCalled = 'ADD'
let _2 = ctx['ADD'](_3, _4)
let _5 = ref(2, deps, evaluationSheetId)
ctx.__lastFnCalled = 'ADD'
let _1 = ctx['ADD'](_2, _5)
return _1;
}"
`;

exports[`expression compiler expression with references with a sheet 1`] = `
"function anonymous(deps,evaluationSheetId,cellOrigin,ref,ensureRange,ctx
) {
// =|0|
ctx['__originCellXC'] = cellOrigin;
let _1 = ref(0, deps, evaluationSheetId)
return _1;
}"
`;

exports[`expression compiler expressions with a debugger 1`] = `
"function anonymous(deps,evaluationSheetId,cellOrigin,ref,ensureRange,ctx
) {
// =? |0| / 2
ctx['__originCellXC'] = cellOrigin;
debugger;
let _2 = ref(0, deps, evaluationSheetId)
ctx.__lastFnCalled = 'DIVIDE'
let _1 = ctx['DIVIDE'](_2, 2)
return _1;
}"
`;

exports[`expression compiler function call 1`] = `
"function anonymous(deps,evaluationSheetId,cellOrigin,ref,ensureRange,ctx
) {
// =sum(1,2)
ctx['__originCellXC'] = cellOrigin;
ctx.__lastFnCalled = 'SUM'
let _1 = ctx['SUM'](1,2)
return _1;
}"
`;

exports[`expression compiler function call 2`] = `
"function anonymous(deps,evaluationSheetId,cellOrigin,ref,ensureRange,ctx
) {
// =sum(true, \\"\\")
ctx['__originCellXC'] = cellOrigin;
ctx.__lastFnCalled = 'SUM'
let _1 = ctx['SUM'](true,\\"\\")
return _1;
}"
`;

exports[`expression compiler function call 3`] = `
"function anonymous(deps,evaluationSheetId,cellOrigin,ref,ensureRange,ctx
) {
// =sum(1,,2)
ctx['__originCellXC'] = cellOrigin;
ctx.__lastFnCalled = 'SUM'
let _1 = ctx['SUM'](1,null,2)
return _1;
}"
`;

exports[`expression compiler read some values and functions 1`] = `
"function anonymous(deps,evaluationSheetId,cellOrigin,ref,ensureRange,ctx
) {
// =|0| + sum(|1|)
ctx['__originCellXC'] = cellOrigin;
let _2 = ref(0, deps, evaluationSheetId)
let _4 = ref(1, deps, evaluationSheetId)
ctx.__lastFnCalled = 'SUM'
let _3 = ctx['SUM'](ensureRange(1, deps, evaluationSheetId))
ctx.__lastFnCalled = 'ADD'
let _1 = ctx['ADD'](_2, _3)
return _1;
}"
`;

exports[`expression compiler simple values 1`] = `
"function anonymous(deps,evaluationSheetId,cellOrigin,ref,ensureRange,ctx
) {
// =1
ctx['__originCellXC'] = cellOrigin;
return 1;
}"
`;

exports[`expression compiler simple values 2`] = `
"function anonymous(deps,evaluationSheetId,cellOrigin,ref,ensureRange,ctx
) {
// =true
ctx['__originCellXC'] = cellOrigin;
return true;
}"
`;

exports[`expression compiler simple values 3`] = `
"function anonymous(deps,evaluationSheetId,cellOrigin,ref,ensureRange,ctx
) {
// =\\"abc\\"
ctx['__originCellXC'] = cellOrigin;
return \\"abc\\";
}"
`;

exports[`expression compiler some arithmetic expressions 1`] = `
"function anonymous(deps,evaluationSheetId,cellOrigin,ref,ensureRange,ctx
) {
// =1 + 3
ctx['__originCellXC'] = cellOrigin;
ctx.__lastFnCalled = 'ADD'
let _1 = ctx['ADD'](1, 3)
return _1;
}"
`;

exports[`expression compiler some arithmetic expressions 2`] = `
"function anonymous(deps,evaluationSheetId,cellOrigin,ref,ensureRange,ctx
) {
// =2 * 3
ctx['__originCellXC'] = cellOrigin;
ctx.__lastFnCalled = 'MULTIPLY'
let _1 = ctx['MULTIPLY'](2, 3)
return _1;
}"
`;

exports[`expression compiler some arithmetic expressions 3`] = `
"function anonymous(deps,evaluationSheetId,cellOrigin,ref,ensureRange,ctx
) {
// =2 - 3
ctx['__originCellXC'] = cellOrigin;
ctx.__lastFnCalled = 'MINUS'
let _1 = ctx['MINUS'](2, 3)
return _1;
}"
`;

exports[`expression compiler some arithmetic expressions 4`] = `
"function anonymous(deps,evaluationSheetId,cellOrigin,ref,ensureRange,ctx
) {
// =2 / 3
ctx['__originCellXC'] = cellOrigin;
ctx.__lastFnCalled = 'DIVIDE'
let _1 = ctx['DIVIDE'](2, 3)
return _1;
}"
`;

exports[`expression compiler some arithmetic expressions 5`] = `
"function anonymous(deps,evaluationSheetId,cellOrigin,ref,ensureRange,ctx
) {
// =-3
ctx['__originCellXC'] = cellOrigin;
ctx.__lastFnCalled = 'UMINUS'
let _1 = ctx['UMINUS']( 3)
return _1;
}"
`;

exports[`expression compiler some arithmetic expressions 6`] = `
"function anonymous(deps,evaluationSheetId,cellOrigin,ref,ensureRange,ctx
) {
// =(3 + 1) * (-1 + 4)
ctx['__originCellXC'] = cellOrigin;
ctx.__lastFnCalled = 'ADD'
let _2 = ctx['ADD'](3, 1)
ctx.__lastFnCalled = 'UMINUS'
let _4 = ctx['UMINUS']( 1)
ctx.__lastFnCalled = 'ADD'
let _3 = ctx['ADD'](_4, 4)
ctx.__lastFnCalled = 'MULTIPLY'
let _1 = ctx['MULTIPLY'](_2, _3)
return _1;
}"
`;
